--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
                 <span style="font: bold 'Secular One'">Ma</span>
             </a>
         </div>
+        <audio id="player">
+            <source src="amogus.ogg" type="audio/ogg">
+        </audio>
         <div class="intro">
             <div class="nome">
                 <span class="primary">Matheus</span> 
                 <span class="light">Alves</span>
+                <span class="sub">(Aperte Espaço)</span>
             </div>
         </div>
         <div class="canvas-container">
             <canvas id="game-canvas" width="1080" height="900"/>
-            <script src="gameoflife.js"></script>
+            <script src="main.js"></script>
         </div>
     </body>
 </html>
